# crabfish

./: Cargo.toml  readme.md
src/: cache_table.rs  eval.rs  flags.rs  helpers.rs  main.rs  move_sort.rs  score.rs  search.rs  thread_launcher.rs  transposition.rs
