[package]
name = "crabfish"
version = "0.1.2"
authors = ["Jonathan Li <30177086+MonliH@users.noreply.github.com>"]
edition = "2018"
description = "A simple chess engine"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/MonliH/crabfish"

[dependencies]
chess = "3"
smallvec = "1"
clap = "=3.0.0-beta.5"

[profile.release]
lto = "fat"
